crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_put_server.snap
---
source: crates/phoenix-codegen/src/go_tests.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"encoding/json"
	"net/http"
)

// NewRouter creates an http.ServeMux that routes requests to the given handlers.
func NewRouter(h Handlers) *http.ServeMux {
	mux := http.NewServeMux()
	mux.HandleFunc("PUT /api/users/{id}", func(w http.ResponseWriter, r *http.Request) {
		id := r.PathValue("id")
		var body ReplaceUserBody
		if err := json.NewDecoder(r.Body).Decode(&body); err != nil {
			http.Error(w, err.Error(), http.StatusBadRequest)
			return
		}
		result, err := h.ReplaceUser(id, body)
		if err != nil {
			http.Error(w, err.Error(), http.StatusInternalServerError)
			return
		}
		w.Header().Set("Content-Type", "application/json")
		json.NewEncoder(w).Encode(result)
	})
	return mux
}
