crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_query_server.snap
---
source: crates/phoenix-codegen/src/go.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"encoding/json"
	"net/http"
	"strconv"
)

// NewRouter creates an http.ServeMux that routes requests to the given handlers.
func NewRouter(h Handlers) *http.ServeMux {
	mux := http.NewServeMux()
	mux.HandleFunc("GET /api/users", func(w http.ResponseWriter, r *http.Request) {
		page := int64(1)
		if v := r.URL.Query().Get("page"); v != "" {
			page, _ = strconv.ParseInt(v, 10, 64)
		}
		limit := int64(20)
		if v := r.URL.Query().Get("limit"); v != "" {
			limit, _ = strconv.ParseInt(v, 10, 64)
		}
		var search *string
		if v := r.URL.Query().Get("search"); v != "" {
			search = &v
		}
		result, err := h.ListUsers(page, limit, search)
		if err != nil {
			http.Error(w, err.Error(), http.StatusInternalServerError)
			return
		}
		w.Header().Set("Content-Type", "application/json")
		json.NewEncoder(w).Encode(result)
	})
	return mux
}
