crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_req_header_server.snap
---
source: crates/phoenix-codegen/src/go.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"encoding/json"
	"net/http"
)

// NewRouter creates an http.ServeMux that routes requests to the given handlers.
func NewRouter(h Handlers) *http.ServeMux {
	mux := http.NewServeMux()
	mux.HandleFunc("POST /api/users", func(w http.ResponseWriter, r *http.Request) {
		var body CreateUserBody
		if err := json.NewDecoder(r.Body).Decode(&body); err != nil {
			http.Error(w, err.Error(), http.StatusBadRequest)
			return
		}
		idempotencyKey := ""
		if v := r.Header.Get("Idempotency-Key"); v != "" {
			idempotencyKey = v
		}
		result, err := h.CreateUser(body, idempotencyKey)
		if err != nil {
			http.Error(w, err.Error(), http.StatusInternalServerError)
			return
		}
		w.Header().Set("Content-Type", "application/json")
		json.NewEncoder(w).Encode(result)
	})
	return mux
}
