crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_resp_header_client.snap
---
source: crates/phoenix-codegen/src/go.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"encoding/json"
	"fmt"
	"net/http"
	"strconv"
)

// ApiClient is a typed HTTP client for the API.
type ApiClient struct {
	BaseURL string
	Client  *http.Client
}

// NewApiClient creates a new API client with the given base URL.
func NewApiClient(baseURL string) *ApiClient {
	return &ApiClient{BaseURL: baseURL, Client: http.DefaultClient}
}
func (c *ApiClient) GetPost(id string) (*GetPostResult, error) {
	u := fmt.Sprintf("%s/api/posts/%s", c.BaseURL, id)
	req, err := http.NewRequest("GET", u, nil)
	if err != nil {
		return nil, err
	}
	resp, err := c.Client.Do(req)
	if err != nil {
		return nil, err
	}
	defer resp.Body.Close()
	if resp.StatusCode >= 400 {
		return nil, fmt.Errorf("HTTP %d", resp.StatusCode)
	}
	var result GetPostResult
	if err := json.NewDecoder(resp.Body).Decode(&result.Body); err != nil {
		return nil, err
	}
	if v := resp.Header.Get("Ratelimit-Remaining"); v != "" {
		result.RatelimitRemaining, _ = strconv.ParseInt(v, 10, 64)
	}
	if v := resp.Header.Get("X-Request-Id"); v != "" {
		result.RequestId = &v
	}
	return &result, nil
}
