crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_resp_header_server.snap
---
source: crates/phoenix-codegen/src/go_tests.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"encoding/json"
	"net/http"
	"strconv"
)

// NewRouter creates an http.ServeMux that routes requests to the given handlers.
func NewRouter(h Handlers) *http.ServeMux {
	mux := http.NewServeMux()
	mux.HandleFunc("GET /api/posts/{id}", func(w http.ResponseWriter, r *http.Request) {
		id := r.PathValue("id")
		result, err := h.GetPost(id)
		if err != nil {
			http.Error(w, err.Error(), http.StatusInternalServerError)
			return
		}
		if result == nil {
			http.Error(w, "handler returned nil result", http.StatusInternalServerError)
			return
		}
		w.Header().Set("Ratelimit-Remaining", strconv.FormatInt(result.RatelimitRemaining, 10))
		if result.RequestId != nil {
			w.Header().Set("X-Request-Id", *result.RequestId)
		}
		w.Header().Set("Content-Type", "application/json")
		json.NewEncoder(w).Encode(result.Body)
	})
	return mux
}
