crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_resp_header_types.snap
---
source: crates/phoenix-codegen/src/go.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

package api

type Post struct {
	Id    int64  `json:"id"`
	Title string `json:"title"`
}

type GetPostResult struct {
	Body               Post    `json:"-"`
	RatelimitRemaining int64   `json:"-"`
	RequestId          *string `json:"-"`
}
